--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
       "express": "^4.18.2",
       "graphql": "^15.7.2",
       "http": "0.0.1-security",
+      "nodemon": "^2.0.20",
       "pg": "^8.9.0",
       "reflect-metadata": "^0.1.13",
       "tsconfig.json": "^1.0.11",
