--- a/package.json
+++ b/package.json
@@ -22,18 +22,19 @@
    },
    "dependencies": {
       "@apollo/server": "^4.3.1",
+      "argon2": "^0.30.3",
       "body-parser": "^1.20.1",
       "class-validator": "^0.14.0",
       "cors": "^2.8.5",
       "dotenv": "^16.0.3",
       "express": "^4.18.2",
-      "graphql": "^15.7.2",
+      "graphql": "^16.6.0",
       "http": "0.0.1-security",
       "nodemon": "^2.0.20",
       "pg": "^8.9.0",
       "reflect-metadata": "^0.1.13",
       "tsconfig.json": "^1.0.11",
-      "type-graphql": "^1.1.1",
+      "type-graphql": "^2.0.0-beta.1",
       "typeorm": "0.3.11"
    }
 }
