--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
    "author": "Orifha Tshikotshi",
    "license": "ISC",
    "devDependencies": {
+      "@types/cookie-parser": "^1.4.3",
       "@types/cors": "^2.8.13",
       "@types/express": "^4.17.16",
+      "@types/jsonwebtoken": "^9.0.1",
       "@types/node": "^16.11.10",
       "ts-node": "^10.9.1",
       "typescript": "^4.9.5"
@@ -25,11 +27,13 @@
       "argon2": "^0.30.3",
       "body-parser": "^1.20.1",
       "class-validator": "^0.14.0",
+      "cookie-parser": "^1.4.6",
       "cors": "^2.8.5",
       "dotenv": "^16.0.3",
       "express": "^4.18.2",
       "graphql": "^16.6.0",
       "http": "0.0.1-security",
+      "jsonwebtoken": "^9.0.0",
       "nodemon": "^2.0.20",
       "pg": "^8.9.0",
       "reflect-metadata": "^0.1.13",
